[package]
name = "serde_derive_internals"
version = "0.23.1" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "AST representation used by Serde derive macros. Unstable."
homepage = "https://serde.rs"
repository = "https://github.com/serde-rs/serde"
documentation = "https://docs.serde.rs/serde_derive_internals/"
keywords = ["serde", "serialization"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
proc-macro2 = { git = "https://github.com/gavofyork/proc-macro2.git" }
syn = { git = "https://github.com/gavofyork/syn.git", default-features = false, features = ["derive", "parsing", "clone-impls"] }

[badges]
travis-ci = { repository = "serde-rs/serde" }
